# camel_learning

./: .gitignore  README.md  dune-project
examples/: adder.ml  demo.ml  demo_sdl.ml  dune  mnist.ml  mnist_common.ml  mnist_sdl.ml  mnist_train.ml  or_gate.ml  xor_gate.ml
lib/: act_func.ml  dune  matrix.ml  model.ml
